--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
 html,
 body {
   height: 100%;
+  max-height: 100%;
+  overflow: hidden;
   background: #0c0a09;
 }
 
